--- a/src/app/auth-callback/auth-callback.html
+++ b/src/app/auth-callback/auth-callback.html
@@ -1,1 +1,4 @@
-<p>auth-callback works!</p>
+<div class="w-screen h-screen bg-white flex justify-center items-center gap-5">
+    <div class="text-loader"></div>
+    <div class="loader"></div>
+</div>
