--- a/src/app/auth-callback/auth-callback.html
+++ b/src/app/auth-callback/auth-callback.html
@@ -1,4 +1,4 @@
-<div class="w-screen h-screen bg-white flex justify-center items-center gap-5">
-    <div class="text-loader"></div>
+<div class="w-screen h-screen bg-p5 flex justify-center items-center gap-5">
+    <div class="text-loader text-white"></div>
     <div class="loader"></div>
 </div>
