--- a/src/styles.css
+++ b/src/styles.css
@@ -131,10 +131,10 @@
     animation: l37 1s infinite;
   }
   .text-loader:before {
-    -webkit-mask-image: linear-gradient(#000 0 0), linear-gradient(#000 0 0);
+    -webkit-mask-image: linear-gradient(#ffffff 0 0), linear-gradient(#ffffff 0 0);
   }
   .text-loader:after {
-    -webkit-mask-image: linear-gradient(#000 0 0);
+    -webkit-mask-image: linear-gradient(#ffffff 0 0);
     transform: scaleY(0.5);
   }
 }
