--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -116,7 +116,7 @@
             <h2
               class="mt-4 text-balance text-3xl font-bold leading-tight md:text-5xl text-p6"
             >
-              Hello {{ userService.user.name || userService.user.username }}, welcome to Jett
+              Hello {{ user.user.name || user.user.username }}, welcome to Jett
             </h2>
             <p class="mt-4 max-w-3xl text-pretty text-white/90 md:text-lg">
               Unleash your creativity with our comprehensive suite of
