--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -24,11 +24,11 @@
         >
           Log In
         </button>
-        <button
+        <!-- <button
           href="#"
           class="inline-flex cursor-pointer items-center rounded-xl bg-white px-3 py-1.5 text-sm font-semibold text-black hover:bg-gray-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-white/20"
         >
-          Sign Up</button
+          Sign Up</button -->
         >}@else {
         <button
           (click)="logout()"
