added loader text

--- a/src/app/components/wavyhero/wavyhero.html
+++ b/src/app/components/wavyhero/wavyhero.html
@@ -4,7 +4,7 @@
 >
   <canvas
     #canvas
-    class="absolute inset-0 z-1"
+    class="bg-black absolute inset-0 z-1"
     [style.filter]="isSafari ? 'blur(' + blur + 'px)' : undefined"
     aria-hidden="true"
   ></canvas>
