--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -373,5 +373,5 @@
   </div>
 </div>
 }@else {
-  <app-auth-callback></app-auth-callback>
+  <app-auth-callback text="Loading Dashboard"></app-auth-callback>
 }
