--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -28,8 +28,8 @@
           href="#"
           class="inline-flex cursor-pointer items-center rounded-xl bg-white px-3 py-1.5 text-sm font-semibold text-black hover:bg-gray-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-white/20"
         >
-          Sign Up</button -->
-        >}@else {
+          Sign Up</button> -->
+        }@else {
         <button
           (click)="logout()"
           class="inline-flex items-center rounded-xl bg-red-600 cursor-pointer px-3 py-1.5 text-sm font-semibold text-white hover:text-black transition-colors hover:bg-red-300 focus:outline-none focus-visible:ring-2 focus-visible:ring-white/20"
