--- a/src/styles.css
+++ b/src/styles.css
@@ -119,7 +119,7 @@
     font-family: monospace;
     display: inline-grid;
     font-size: 30px;
-    --loader-text: 'Logging in'
+    /* --loader-text: 'Logging in' */
   }
   .text-loader:before,
   .text-loader:after {
