--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -66,7 +66,7 @@
               />
               @if(dropdownOpen){
               <div
-                class="dropdown flex flex-col justify-around z-20 overflow-hidden absolute right-8 top-18 bg-p5 text-neutral-100 text-left shadow-lg rounded-lg divide-y divide-gray-"
+                class="dropdown flex flex-col justify-around z-20 overflow-hidden absolute right-8 top-18 bg-neutral-300 text-neutral-800 text-left shadow-lg rounded-lg divide-y divide-neutral-500"
               >
                 <a href="/" class="py-2 px-4">Home</a>
                 <div
@@ -91,12 +91,12 @@
           [contentClass]="''"
         >
           <div
-            class="flex flex-col gap-2 h-full bg-transparent justify-center py-10 w-full"
+            class="flex flex-col gap-2 h-full bg-transparent justify-center px-5 py-10 w-full"
           >
             <h2
-              class="mt-4 text-balance text-3xl font-bold leading-tight md:text-5xl text-p6"
+              class="mt-4 text-balance text-3xl font-bold leading-tight md:text-4xl lg:text-5xl text-p6"
             >
-              Hello {{ user.user.name || user.user.username }}, welcome to Jett
+              Hello {{ user.user.name || user.user.username }}, Welcome to Jett
             </h2>
             <p class="mt-4 max-w-3xl text-pretty text-white/90 md:text-lg">
               Unleash your creativity with our comprehensive suite of
@@ -142,7 +142,7 @@
             />
             @if(tooltipOpen){
             <span
-              class="absolute text-center left-1/2 -translate-x-3/4 sm:translate-0 w-[200px] mt-2 rounded-md bg-black text-white text-sm px-2 py-1 shadow-lg"
+              class="absolute text-center left-1/2 -translate-x-2/3 sm:translate-0 w-[200px] mt-2 rounded-md bg-black text-white text-sm px-2 py-1 shadow-lg"
             >
               If you have already deployed a project and it does not show, try
               refreshing the page. </span
@@ -183,7 +183,7 @@
           @for(project of UserProjects ; track project.deploy_id){
           <app-card [project]="project">
             <article
-              class="group rounded-3xl border border-gray-200 bg-white p-5 md:p-6 shadow-sm transition-shadow hover:shadow-md"
+              class="group rounded-3xl h-62 border border-gray-200 bg-white p-5 md:p-6 shadow-sm transition-shadow hover:shadow-md"
               aria-label="Project card"
             >
               <header class="flex items-start justify-between gap-3">
@@ -202,7 +202,7 @@
                       class="w-4 h-4 rounded-full"
                       [ngClass]="{
                         'bg-yellow-400': project.status === 'uploaded',
-                        'bg-orange-600': project.status === 'building',
+                        'bg-orange-400': project.status === 'building',
                         'bg-green-400': project.status === 'deployed',
                         'bg-red-400': project.status === 'failed',
                         'animate-pulse':
@@ -271,7 +271,33 @@
                     class="mt-0.5 rounded-lg bg-gray-100 text-gray-600 p-2 w-[32px]"
                     aria-hidden="true"
                   >
-                    <img src="/icons/branch.svg" alt="" class="size-4" />
+                    <svg
+                      class="size-4"
+                      viewBox="0 0 24 24"
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="#475569"
+                      stroke-width="1.75"
+                    >
+                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                      <g
+                        id="SVGRepo_tracerCarrier"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></g>
+                      <g id="SVGRepo_iconCarrier">
+                        <title>branch</title>
+                        <g id="Layer_2" data-name="Layer 2">
+                          <g id="invisible_box" data-name="invisible box">
+                            <rect width="48" height="48" fill="none"></rect>
+                          </g>
+                          <g id="icons_Q2" data-name="icons Q2">
+                            <path
+                              d="M44,9a7,7,0,1,0-9,6.7V16a6,6,0,0,1-6,6H21a10.3,10.3,0,0,0-6,2V15.7a7,7,0,1,0-4,0V32.3a7,7,0,1,0,4,0V32a6,6,0,0,1,6-6h8A10,10,0,0,0,39,16v-.3A7,7,0,0,0,44,9ZM10,9a3,3,0,0,1,6,0,3,3,0,0,1-6,0Zm6,30a3,3,0,1,1-3-3A2.9,2.9,0,0,1,16,39ZM37,12a2.9,2.9,0,0,1-3-3,3,3,0,0,1,6,0A2.9,2.9,0,0,1,37,12Z"
+                            ></path>
+                          </g>
+                        </g>
+                      </g>
+                    </svg>
                   </div>
                   <div class="w-full">
                     <div
@@ -372,6 +398,7 @@
     </main>
   </div>
 </div>
+<app-mobile-nav></app-mobile-nav>
 }@else {
-  <app-auth-callback></app-auth-callback>
+<app-auth-callback></app-auth-callback>
 }
