--- a/src/app/components/multi-step-loader/multi-step-loader.html
+++ b/src/app/components/multi-step-loader/multi-step-loader.html
@@ -1,5 +1,5 @@
+@if(loading){
 <div
-  *ngIf="loading"
   @fade
   class="w-full h-full fixed inset-0 z-6 flex items-center justify-center backdrop-blur-2xl"
   role="dialog"
@@ -70,3 +70,4 @@
     aria-hidden="true"
   ></div>
 </div>
+}
