--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -183,7 +183,7 @@
           @for(project of UserProjects ; track project.deploy_id){
           <app-card [project]="project">
             <article
-              class="group rounded-3xl h-62 border border-gray-200 bg-white p-5 md:p-6 shadow-sm transition-shadow hover:shadow-md"
+              class="group rounded-3xl h-62 border border-gray-200 bg-white p-5 md:p-6 shadow-sm transition-shadow hover:shadow-md flex flex-col justify-between"
               aria-label="Project card"
             >
               <header class="flex items-start justify-between gap-3">
@@ -268,34 +268,20 @@
 
                 <div class="flex items-start gap-1">
                   <div
-                    class="mt-0.5 rounded-lg bg-gray-100 text-gray-600 p-2 w-[32px]"
+                    class="mt-0.5 rounded-lg bg-gray-100 text-gray-600 p-2 w-[32px] h-[32px] flex items-center justify-center"
                     aria-hidden="true"
                   >
                     <svg
-                      class="size-4"
-                      viewBox="0 0 24 24"
+                      class="w-4 h-4"
+                      viewBox="0 0 48 48"
                       xmlns="http://www.w3.org/2000/svg"
                       fill="#475569"
                       stroke-width="1.75"
                     >
-                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                      <g
-                        id="SVGRepo_tracerCarrier"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></g>
-                      <g id="SVGRepo_iconCarrier">
-                        <title>branch</title>
-                        <g id="Layer_2" data-name="Layer 2">
-                          <g id="invisible_box" data-name="invisible box">
-                            <rect width="48" height="48" fill="none"></rect>
-                          </g>
-                          <g id="icons_Q2" data-name="icons Q2">
-                            <path
-                              d="M44,9a7,7,0,1,0-9,6.7V16a6,6,0,0,1-6,6H21a10.3,10.3,0,0,0-6,2V15.7a7,7,0,1,0-4,0V32.3a7,7,0,1,0,4,0V32a6,6,0,0,1,6-6h8A10,10,0,0,0,39,16v-.3A7,7,0,0,0,44,9ZM10,9a3,3,0,0,1,6,0,3,3,0,0,1-6,0Zm6,30a3,3,0,1,1-3-3A2.9,2.9,0,0,1,16,39ZM37,12a2.9,2.9,0,0,1-3-3,3,3,0,0,1,6,0A2.9,2.9,0,0,1,37,12Z"
-                            ></path>
-                          </g>
-                        </g>
+                      <g>
+                        <path
+                          d="M44,9a7,7,0,1,0-9,6.7V16a6,6,0,0,1-6,6H21a10.3,10.3,0,0,0-6,2V15.7a7,7,0,1,0-4,0V32.3a7,7,0,1,0,4,0V32a6,6,0,0,1,6-6h8A10,10,0,0,0,39,16v-.3A7,7,0,0,0,44,9ZM10,9a3,3,0,0,1,6,0,3,3,0,0,1-6,0Zm6,30a3,3,0,1,1-3-3A2.9,2.9,0,0,1,16,39ZM37,12a2.9,2.9,0,0,1-3-3,3,3,0,0,1,6,0A2.9,2.9,0,0,1,37,12Z"
+                        ></path>
                       </g>
                     </svg>
                   </div>
