--- a/src/app/components/new-dialog/new-dialog.html
+++ b/src/app/components/new-dialog/new-dialog.html
@@ -23,11 +23,11 @@
         <div class="flex flex-col gap-2">
           <h2
             id="import-title"
-            class="text-2xl font-semibold -translate-y-0.5 tracking-tight"
+            class="sm:text-2xl font-semibold -translate-y-0.5 tracking-tight"
           >
             Import Your Git Repositories
           </h2>
-          <h4 class="text-sm text-neutral-400">
+          <h4 class="text-xs sm:text-md text-neutral-400">
             <span class="font-bold">Note:</span> Make sure your React project
             resides in your repository root
           </h4>
