--- a/src/app/components/login-dialog/login-dialog.html
+++ b/src/app/components/login-dialog/login-dialog.html
@@ -1,7 +1,7 @@
 <div
   class="fixed inset-0 bg-black/50 flex items-center justify-center"
 >
-  <div class=" flex flex-col items-center justify-around backdrop-blur-sm bg-gradient-to-br from-pink-100/30 to-cyan-400/30 border-l-6 border-t-2 border-b-4 border-r-1 inset-shadow-2xs border-cyan-300 rounded-full aspect-square p-8 w-[300px] shadow-lg text-center">
+  <div class=" flex flex-col items-center justify-around backdrop-blur-sm bg-gradient-to-br from-pink-100/30 to-cyan-400/30 inset-shadow-2xs rounded-lg aspect-square p-8 w-[300px] shadow-lg text-center">
     <h2 class="text-xl font-bold text-white">Sign in</h2>
     <button
       (click)="login('google')"
