--- a/src/app/components/drawer/drawer.html
+++ b/src/app/components/drawer/drawer.html
@@ -76,7 +76,7 @@
       >
     </a>
     <a
-      href="#docs"
+      href="/docs"
       class="group flex items-center gap-3 rounded-2xl px-3 py-2 hover:bg-gray-100 text-gray-800"
     >
       <span class="flex h-8 w-8 items-center justify-center text-gray-700">
