--- a/src/app/components/mobile-nav/mobile-nav.html
+++ b/src/app/components/mobile-nav/mobile-nav.html
@@ -7,7 +7,9 @@
     class="rounded-2xl border border-white/10 bg-zinc-900/80 backdrop-blur supports-[backdrop-filter]:bg-zinc-900/60 shadow-lg"
   >
     <ul class="flex items-center justify-around px-1 py-3">
-      <li class="hidden xs:block">
+      <li [ngClass]="{ 'hidden xs:block': router.url.startsWith('/#') || router.url === '/',
+       '': !router.url.startsWith('/#')
+       }">
         <a
           href="/"
           aria-current="page"
@@ -32,7 +34,8 @@
       @if(!isDashboard){
       <li>
         <a
-          href="#about"
+          [routerLink]="['/about']"
+          fragment="about"
           aria-current="page"
           class="group flex items-center gap-2 rounded-xl px-1 py-2 text-white hover:bg-white/15 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/20"
         >
@@ -40,9 +43,9 @@
           <span class="text-sm font-medium">About</span>
         </a>
       </li>
-      <li>
+      <li [ngClass]="{'hidden': router.url.startsWith('/docs')}">
         <a
-          href="#docs"
+          href="/docs"
           aria-current="page"
           class="group flex items-center gap-2 rounded-xl px-1 py-2 text-white hover:bg-white/15 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/20"
         >
