--- a/src/styles.css
+++ b/src/styles.css
@@ -98,7 +98,7 @@
     display: none;
   }
   .loader {
-    width: clamp(30px,10vw,40px);
+    width: clamp(30px, 10vw, 40px);
     aspect-ratio: 1;
     color: var(--color-logo);
     background: conic-gradient(currentColor 0 270deg, #0000 0);
@@ -119,7 +119,7 @@
     font-family: monospace;
     display: inline-grid;
     font-size: clamp(1rem, 4vw, 3rem);
-    --loader-text: 'Loading Dashboard'
+    --loader-text: "Loading Dashboard";
   }
   .text-loader:before,
   .text-loader:after {
@@ -132,11 +132,16 @@
     animation: l37 1s infinite;
   }
   .text-loader:before {
-    -webkit-mask-image: linear-gradient(#ffffff 0 0), linear-gradient(#ffffff 0 0);
+    -webkit-mask-image: linear-gradient(#ffffff 0 0),
+      linear-gradient(#ffffff 0 0);
   }
   .text-loader:after {
     -webkit-mask-image: linear-gradient(#ffffff 0 0);
     transform: scaleY(0.5);
+  }
+  .no-scroll {
+    overflow: hidden;
+    height: 100vh;
   }
 }
 
