--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,7 +1,7 @@
 <header
-  class="text-gray-300 font-sans relative"
+  class="text-gray-300 font-sans relative z-1"
   [ngClass]="{
-    'border-b border-neutral-700 z-1': isDocs
+    'border-b border-neutral-700': isDocs
   }"
 >
   <nav class="mx-auto max-w-screen-2xl px-6 z-1">
