--- a/src/app/docs/docs.html
+++ b/src/app/docs/docs.html
@@ -454,6 +454,98 @@
         </p>
       </section>
       <!-- Section 4 -->
+      <section id="devs" class="pb-20 py-20 px-8 sm:px-16">
+        <h1 class="text-2xl font-semibold">Meet Our Devs</h1>
+        <div class="flex flex-col lg:flex-row w-full justify-start gap-8 mt-12">
+          <!-- Sandarva -->
+          <div
+            class="p-4 group flex flex-col max-w-md bg-neutral-700 rounded-3xl hover:ring-1 inset-shadow-sm inset-shadow-white ring-white h-full lg:flex-1"
+          >
+            <img
+              src="/Sandy.jpg"
+              alt="Sandarva"
+              class="rounded-2xl group-hover:px-1 transition-all duration-200"
+            />
+            <h2
+              class="text-sm text-neutral-300 mt-4 group-hover:px-4 transition-all duration-200"
+            >
+              System Design, Backend Development
+            </h2>
+            <h2
+              class="text-xl my-2 font-semibold group-hover:px-4 transition-all duration-500"
+            >
+              Sandarva Podder
+            </h2>
+            <p
+              class="group-hover:px-4 transition-all duration-700 text-sm text-neutral-200 line-clamp-4"
+            >
+              Backend engineer behind Jett's microservice foundation. He
+              designed the infrastructure that keep deployments scalable.
+              Focusing on system design and distributed architecture, he
+              integrated Cloudflare and Redis hashset mechanism.
+            </p>
+            <div
+              class="group-hover:px-4 transition-all duration-1000 flex gap-2 mt-auto pt-4"
+            >
+              <a
+                href="https://www.linkedin.com/in/sandarva-podder-148167274/"
+                target="_blank"
+                ><img src="icons/linkedin.svg" alt="" class="size-6"
+              /></a>
+              <a href="https://github.com/Sandarva-9304" target="_blank"
+                ><img src="icons/github.svg" alt="" class="size-6"
+              /></a>
+              <a href="https://www.instagram.com/_sandy_9304_" target="_blank"
+                ><img src="icons/insta.svg" alt="" class="size-6"
+              /></a>
+            </div>
+          </div>
+
+          <!-- Sahil -->
+          <div
+            class="p-4 group flex flex-col max-w-md bg-neutral-700 rounded-3xl hover:ring-1 inset-shadow-sm inset-shadow-white ring-white h-full lg:flex-1"
+          >
+            <img
+              src="/Sahil.jpg"
+              alt="Sahil"
+              class="rounded-2xl group-hover:px-1 transition-all duration-200"
+            />
+            <h2
+              class="text-sm text-neutral-300 mt-4 group-hover:px-4 transition-all duration-200"
+            >
+              Frontend Development, API Integration
+            </h2>
+            <h2
+              class="text-xl my-2 font-semibold group-hover:px-4 transition-all duration-500"
+            >
+              Sahil Ansari
+            </h2>
+            <p
+              class="group-hover:px-4 transition-all duration-700 text-sm text-neutral-200 line-clamp-4"
+            >
+              Frontend developer who crafted Jett's Angular-based dashboard and
+              connected it seamlessly with the backend services. He implemented
+              the integrated APIs, jwt authentication and designed the user
+              experience, making Jett simple and fast and secure.
+            </p>
+            <div
+              class="group-hover:px-4 transition-all duration-1000 flex gap-2 mt-auto pt-4"
+            >
+              <a
+                href="https://www.linkedin.com/in/md-sahil-ansari-8657722b5/"
+                target="_blank"
+                ><img src="icons/linkedin.svg" alt="" class="size-6"
+              /></a>
+              <a href="https://github.com/sahil-ansari-47" target="_blank"
+                ><img src="icons/github.svg" alt="" class="size-6"
+              /></a>
+              <a href="https://www.instagram.com/_.sahil._.47_" target="_blank"
+                ><img src="icons/insta.svg" alt="" class="size-6"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="contribute" class="pb-20 py-20 px-8 sm:px-16">
         <h1 class="text-2xl font-semibold">Contributions</h1>
         <p class="mt-4">
