--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -3,7 +3,7 @@
     class="backdrop-blur-2xl min-h-screen w-full max-w-7xl text-white my-6 md:my-10 rounded-2xl px-4 sm:px-6 md:px-10 lg:px-16 py-10 md:py-16 lg:py-20 md:mb-30 flex flex-col gap-8 md:gap-14 lg:gap-20"
   >
     <div
-      class="flex flex-col items-center justify-start mt-20 text-center h-[62vh]"
+      class="flex flex-col items-center justify-start mt-20 text-center h-[62vh] md:h-fit"
     >
       <h1
         class="text-white text-3xl sm:text-4xl md:text-5xl font-bold text-balance"
