--- a/src/styles.css
+++ b/src/styles.css
@@ -91,6 +91,9 @@
   .repos-scrollbar::-webkit-scrollbar-thumb:hover {
     background-color: rgba(255, 255, 255, 0.3);
   }
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
   /* Hide default browser clear (for <input type="search"> only) */
   input[type="search"]::-webkit-search-cancel-button {
     -webkit-appearance: none;
