--- a/src/app/docs/docs.html
+++ b/src/app/docs/docs.html
@@ -464,7 +464,7 @@
             <img
               src="/Sandy.jpg"
               alt="Sandarva"
-              class="rounded-2xl group-hover:px-1 transition-all duration-200"
+              class="rounded-2xl group-hover:px-2 group-hover:py-2 transition-all duration-500"
             />
             <h2
               class="text-sm text-neutral-300 mt-4 group-hover:px-4 transition-all duration-200"
@@ -508,7 +508,7 @@
             <img
               src="/Sahil.jpg"
               alt="Sahil"
-              class="rounded-2xl group-hover:px-1 transition-all duration-200"
+              class="rounded-2xl group-hover:px-2 group-hover:py-2 transition-all duration-500"
             />
             <h2
               class="text-sm text-neutral-300 mt-4 group-hover:px-4 transition-all duration-200"
