--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -190,7 +190,7 @@
                 <div class="flex flex-col items-start gap-2">
                   <div class="min-w-0">
                     <a
-                      href="{{ project.deployed_url }}"
+                      href="{{ project.deployed_url.slice(0, -11) }}"
                       target="_blank"
                       class="text-sm xs:text-base md:text-lg font-semibold text-gray-900 text-pretty"
                     >
@@ -315,7 +315,7 @@
                   </a>
                   @if(project.deployed_url){
                   <a
-                    href="{{ project.deployed_url }}"
+                    href="{{ project.deployed_url.slice(0, -11)}}"
                     target="_blank"
                     class="inline-flex items-center justify-center rounded-full bg-gray-900 px-4 py-2 text-sm font-semibold text-white hover:bg-gray-800 focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500"
                   >
